# af-first-project

./: .airflowignore  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ci.sh  dags.py  pyproject.toml
src/first_project/: calc.py  main.py  run.py
tests/: test_valid_dags.py
