[project]
name = "first-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.3.1",
  "numpy>=2.4.2",
]

[dependency-groups]
dev = [
  "apache-airflow-providers-cncf-kubernetes",
  "apache-airflow<3",
  "black>=26.1.0",
  "flake8-pyproject>=1.2.4", # configure flake8 inside pyproject.toml
  "flake8>=7.3.0",
  "pytest>=9.0.2",
]

# Using this build system the package 'first project' will be
# installed.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Create entrypoint for all logic in the project
[project.scripts]
first = "first_project.main:cli"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
